--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -355,6 +355,8 @@ jobs:
           if git diff --cached --quiet; then
             echo "✅ No image updates needed."
           else
+            LEN=${#PAT}
+            echo "PAT length is $LEN"
             git remote set-url origin https://Login-Linjeforening-for-IT:${{ secrets.PAT }}@github.com/Login-Linjeforening-for-IT/${{ env.repo_name }}.git
             git commit -m "Update ${PROJECT_NAME} image tag to ${NEW_TAG}"
             git push -u origin "$BRANCH"
