--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -322,12 +322,20 @@ jobs:
           token: ${{ secrets.PAT }}
           path: ${{ env.repo_name }}
 
-      - name: Update image version
+            - name: Update image version
+        env:
+          GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
+          GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
+          PAT: ${{ secrets.PAT }}
+          JFROG_EMAIL: ${{ secrets.JFROG_EMAIL }}
+          JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
+          JFROG_ID: ${{ secrets.JFROG_ID }}
+          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
         run: |
           set -e
           PROJECT_NAME="${GITHUB_REPOSITORY##*/}"
           NEW_TAG="${{ needs.fix-version.outputs.new_tag }}"
-          REGISTRY="${{ secrets.DOCKER_REGISTRY }}/tekkom/dev"
+          REGISTRY="${DOCKER_REGISTRY}/tekkom/dev"
           BRANCH="main"
 
           cd "${{ env.repo_name }}/cluster/$PROJECT_NAME"
@@ -355,9 +363,8 @@ jobs:
           if git diff --cached --quiet; then
             echo "✅ No image updates needed."
           else
-            LEN=${#PAT}
-            echo "PAT length is $LEN"
-            git remote set-url origin https://Login-Linjeforening-for-IT:${{ secrets.PAT }}@github.com/Login-Linjeforening-for-IT/${{ env.repo_name }}.git
+            echo "🔑 Using PAT to push changes..."
+            git remote set-url origin "https://Login-Linjeforening-for-IT:${PAT}@github.com/Login-Linjeforening-for-IT/${{ env.repo_name }}.git"
             git commit -m "Update ${PROJECT_NAME} image tag to ${NEW_TAG}"
             git push -u origin "$BRANCH"
           fi
