--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -364,6 +364,8 @@ jobs:
             echo "✅ No image updates needed."
           else
             echo "🔑 Using PAT to push changes..."
+            echo "$GIT_USER_NAME"
+            echo  "$GIT_USER_EMAIL"
             git remote set-url origin "https://Login-Linjeforening-for-IT:${PAT}@github.com/Login-Linjeforening-for-IT/${{ env.repo_name }}.git"
             git commit -m "Update ${PROJECT_NAME} image tag to ${NEW_TAG}"
             git push -u origin "$BRANCH"
