--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -329,7 +329,8 @@ jobs:
         run: |
           set -e
           PROJECT_NAME="${GITHUB_REPOSITORY##*/}"
-          NEW_TAG="${{ needs.fix-version.outputs.new_tag }}"
+          NEW_TAG="5.0.0"
+          # NEW_TAG="${{ needs.fix-version.outputs.new_tag }}"
           REGISTRY="${DOCKER_REGISTRY}/tekkom/dev"
           BRANCH="main"
 
