--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,11 @@
 .git
-docker-compose.yml
 Dockerfile
 Dockerfile.dev
 node_modules
 build
+docker-compose.yml
+.dockerignore
+npm-debug.log
+README.md
+.next
+.git
