--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "lint": "eslint --fix ./src"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^15.5.4",
-    "lucide-react": "^0.545.0",
-    "next": "^15.5.4",
+    "@next/eslint-plugin-next": "^15.5.6",
+    "lucide-react": "^0.546.0",
+    "next": "^15.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
     "react-router": "^7.9.4",
     "remark-gfm": "^4.0.1",
+    "sharp": "^0.34.4",
     "swr": "^2.3.6",
     "uibee": "^1.7.0"
   },
@@ -25,14 +26,14 @@
     "@eslint/eslintrc": "^3.3.1",
     "@stylistic/eslint-plugin": "^5.4.0",
     "@tailwindcss/postcss": "^4.1.14",
-    "@types/node": "^24.7.2",
+    "@types/node": "^24.8.1",
     "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.1",
+    "@types/react-dom": "^19.2.2",
     "eslint": "^9.37.0",
-    "eslint-config-next": "^15.5.4",
+    "eslint-config-next": "^15.5.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0"
+    "typescript-eslint": "^8.46.1"
   }
 }
