Added image name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 services:
   beehive:
-    restart: always
     container_name: beehive
+    image: beehive
+    restart: always
     build:
       context: .
       dockerfile: Dockerfile
