--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "PORT=3001 next start",
+    "dev": "bun --bun next dev",
+    "build": "bun --bun next build",
+    "start": "PORT=3001 bun --bun next start",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix"
   },
