--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - workerbee_default
     mem_limit: 1g
     cpus: "2.0"
+    dns:
+      - 8.8.8.8
+      - 1.1.1.1
+      - 10.177.195.1
+      - 213.186.33.99
 
 networks:
   workerbee_default:
