--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bun --bun next dev",
-    "build": "bun --bun next build",
-    "start": "PORT=3001 bun --bun next start",
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "PORT=3001 next start",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^16.1.0",
+    "@next/eslint-plugin-next": "^16.1.1",
     "lucide-react": "^0.562.0",
-    "next": "^16.1.0",
+    "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
@@ -21,7 +21,7 @@
     "react-snowfall": "^2.4.0",
     "remark-gfm": "^4.0.1",
     "swr": "^2.3.8",
-    "uibee": "^2.4.13"
+    "uibee": "^2.5.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
@@ -31,11 +31,11 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.0",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.0",
+    "typescript-eslint": "^8.50.1",
     "@types/bun": "1.3.5"
   }
 }
