--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.1",
-    "@types/bun": "1.3.5"
+    "typescript-eslint": "^8.50.1"
   }
 }
