--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,7 +60,8 @@
         "./src/*"
       ]
     },
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["bun"]
   },
   "include": [
     "next-env.d.ts",
