--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@eslint/eslintrc": "^3.3.3",
     "@stylistic/eslint-plugin": "^5.8.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/bun": "^1.3.9",
     "@types/node": "^25.2.2",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
